# makerpnp

./: .gitattributes  .gitignore  Cargo.toml  Hacks.md  KnownIssues.md  README.md
common/cli/: Cargo.toml
common/cli/src/: tracing.rs
common/i18n/: Cargo.toml
common/i18n/src/: lib.rs
common/util/: Cargo.toml
common/util/src/: lib.rs  path.rs
common/util/src/assert/: mod.rs
common/util/src/test/: lock.rs  mod.rs
crates/gerber/: Cargo.toml
crates/gerber/src/: lib.rs
crates/gerber_viewer/: Cargo.toml  README.md
crates/gerber_viewer/demo/: Cargo.toml
crates/gerber_viewer/demo/src/: main.rs
crates/gerber_viewer/src/: color.rs  expressions.rs  geometry.rs  layer.rs  lib.rs  position.rs  renderer.rs
crates/gerber_viewer_egui/: Cargo.toml
crates/gerber_viewer_egui/examples/ai_generated/: diamond_using_polygon_macro.gbr
crates/gerber_viewer_egui/examples/diptrace_4.3/region_test_1/: region_test_1.dip
crates/gerber_viewer_egui/src/: color.rs  geometry.rs  gerber.rs  logging.rs  main.rs
crates/gerber_viewer_egui/src/gerber/: color.rs  expressions.rs  geometry.rs  layer.rs  mod.rs  position.rs
crates/i18n/: Cargo.toml
crates/i18n/src/: lib.rs
crates/makerpnp_reactive/: Cargo.toml  README.md
crates/makerpnp_reactive/src/: lib.rs
crates/makerpnp_reactive/src/reactive/: derived.rs  mod.rs  registry.rs  value.rs
crates/math/: Cargo.toml
crates/math/src/: lib.rs  ops.rs
crates/planner_app/: Cargo.toml
crates/planner_app/src/: lib.rs
crates/planner_app/src/capabilities/: mod.rs  navigator.rs  view_renderer.rs
crates/planner_app/src/effects/: mod.rs  pcb_view_renderer.rs
crates/planner_cli/: Cargo.toml
crates/planner_cli/src/: core.rs  lib.rs  main.rs  opts.rs
crates/planner_cli/tests/: planner.rs
crates/planner_cli/tests/common/: mod.rs  operation_history.rs  phase_placement_builder.rs  project_builder.rs  project_report_builder.rs
crates/planner_gui/: Cargo.toml
crates/planner_gui/src/: app_core.rs  config.rs  main.rs
crates/planner_gui/src/app_tabs/: home.rs  mod.rs  new.rs  project.rs
crates/planner_gui/src/project/: mod.rs  toolbar.rs
crates/planner_gui/src/runtime/: mod.rs
crates/planner_gui/src/task/: mod.rs
crates/planner_gui/src/toolbar/: mod.rs
crates/planner_gui/src/widgets/: mod.rs  properties.rs  tab_bar.rs
crates/planner_gui_egui/: Cargo.toml
crates/planner_gui_egui/docs/dev/: event_processing.md
crates/planner_gui_egui/src/: app_core.rs  config.rs  file_picker.rs  lib.rs  main.rs  planner_app_core.rs  profiling.rs  runtime.rs  tabs.rs  toolbar.rs  ui_app.rs  ui_commands.rs  ui_component.rs  ui_util.rs
crates/planner_gui_egui/src/dialogs/: manage_gerbers.rs
crates/planner_gui_egui/src/filter/: mod.rs
crates/planner_gui_egui/src/forms/: mod.rs  validation.rs
crates/planner_gui_egui/src/i18n/: conversions.rs  datatable_support.rs
crates/planner_gui_egui/src/pcb/: configuration_tab.rs  explorer_tab.rs  gerber_viewer_tab.rs  mod.rs  tabs.rs
crates/planner_gui_egui/src/project/: explorer_tab.rs  load_out_tab.rs  mod.rs  overview_tab.rs  parts_tab.rs  pcb_tab.rs  phase_tab.rs  phase_ui.rs  placements_tab.rs  process.rs  project_explorer.rs  project_explorer_tab.rs  project_explorer_ui.rs  tables.rs  tabs.rs  toolbar.rs  unit_assignments_tab.rs
crates/planner_gui_egui/src/runtime/: legacy_runtime.rs  mod.rs
crates/planner_gui_egui/src/task/: mod.rs
crates/planner_gui_egui/src/ui_app/: app_tabs.rs
crates/planner_gui_egui/src/ui_components/: gerber_viewer_ui.rs  mod.rs
crates/planner_gui_egui/src/widgets/: augmented_list_selector.rs  list_box.rs  mod.rs  vertical_stack.rs
crates/planning/: Cargo.toml
crates/planning/src/: design.rs  file.rs  gerber.rs  lib.rs  library.rs  operation_history.rs  operations.rs  part.rs  pcb.rs  phase.rs  placement.rs  process.rs  project.rs  reference.rs  report.rs  variant.rs
crates/planning/src/tests/: mod.rs  placement_sorting.rs  unit_positioning.rs  unit_positioning_real_world.rs  unit_transforms.rs
crates/pnp/: Cargo.toml
crates/pnp/src/: lib.rs  load_out.rs  object_path.rs  package.rs  panel.rs  part.rs  pcb.rs  placement.rs
crates/stores/: Cargo.toml
crates/stores/src/: assembly_rules.rs  eda_placements.rs  lib.rs  load_out.rs  package_mappings.rs  packages.rs  part_mappings.rs  parts.rs  placements.rs  substitutions.rs
crates/stores/src/csv/: manufacturer_package_code_helper.rs  manufacturer_package_code_sequence.rs  mod.rs  numeric_sequence.rs  packages.rs  sequential_fields_adaptor.rs  sequential_fields_helper.rs
crates/variantbuilder_app/: Cargo.toml
crates/variantbuilder_app/src/: lib.rs
crates/variantbuilder_cli/: Cargo.toml
crates/variantbuilder_cli/src/: core.rs  main.rs  opts.rs
crates/variantbuilder_cli/tests/: variantbuilder.rs
eda/eda/: Cargo.toml
eda/eda/src/: lib.rs  placement.rs
eda/eda/src/diptrace/: csv.rs
eda/eda/src/kicad/: csv.rs
eda/eda_units/: Cargo.toml
eda/eda_units/src/: lib.rs  test.rs
eda/eda_units/src/eda_units/: dimension.rs  mod.rs  unit_system.rs
gerber/gerber/: Cargo.toml
gerber/gerber/src/testing/: mod.rs
planning/part_mapper/: Cargo.toml
planning/part_mapper/src/: criteria.rs
planning/planner_gui_egui/: Cargo.toml
planning/planner_gui_egui/docs/dev/: event_processing.puml
planning/planner_gui_egui/src/: command.rs  config.rs  file_picker.rs  lib.rs  main.rs  planner_app_core.rs
planning/planner_gui_egui/src/dialogs/: manage_gerbers.rs  mod.rs
planning/planner_gui_egui/src/filter/: mod.rs
planning/planner_gui_egui/src/forms/: mod.rs
planning/planner_gui_egui/src/i18n/: conversions.rs  mod.rs
planning/planner_gui_egui/src/project/: toolbar.rs
planning/planner_gui_egui/src/runtime/: legacy_runtime.rs  mod.rs
planning/planner_gui_egui/src/ui_components/: gerber_viewer_ui.rs
planning/planning/: Cargo.toml
planning/planning/src/: actions.rs  file.rs  operation_history.rs  phase.rs  project.rs  variant.rs
planning/planning/src/tests/: unit_positioning.rs
pnp/pnp/: Cargo.toml
pnp/pnp/src/: lib.rs  panel.rs  part.rs  placement.rs  reference.rs
(+257 files in other folders)
