[workspace]
# Due to the requirement for test dependencies, binaries we need to use the resolver otherwise
# the "testing" feature gets pulled in when you don't want it to.
# See https://github.com/rust-lang/cargo/issues/4866
# See https://doc.rust-lang.org/beta/cargo/reference/resolver.html#resolver-versions
resolver = "2"

members = [
    "crates/assembly",
    "crates/cli",
    "crates/criteria",
    "crates/cli",
    "crates/eda",
    "crates/eda_units",
    "crates/gerber",
    "crates/gerber_viewer_egui",
    "crates/i18n",
    "crates/math",
    "crates/planning",
    "crates/part_mapper",
    "crates/package_mapper",
    "crates/pnp",
    "crates/planner_app",
    "crates/planner_cli",
    "crates/planner_gui_egui",
    "crates/stores",
    "crates/variantbuilder_app",
    "crates/variantbuilder_cli",
    "crates/util",
]

[workspace.dependencies]
thiserror = { version = "2.0.12" }
anyhow = { version = "1.0.98" }
regex = { version = "1.11.1" }
time = { version = "0.3.41" }
indexmap = { version = "2.9.0" }
slotmap = { version = "1.0.7" }
heck = { version = "0.5.0" }
futures = {  version = "0.3.31" }
async-std = {  version = "1.13.1" }
petgraph = { version = "0.8.1"}
csv = { version = "1.3.1" }
termtree = { version = "0.5.1"}
derivative = { version = "2.2.0" }
lexical-sort = { version = "0.3.1"}
tap = { version = "1.0.1" }
uuid = { version = "1.18.0" }

# enums
strum = { version = "0.27.1" }
strum_macros = { version = "0.27.1" }

# time
# Note: using `chrono`, because it has 13k dependents vs `time`'s 3k dependents (as of 2025/04/04) 
chrono = { version = "0.4.41"}

# cli
clap = { version = "4.5.39" }
clap-verbosity-flag = { version = "3.0.3" }
argfile = { version = "0.2.1" }

# logging
log = { version = "0.4.27" }
env_logger = { version = "0.11.8" }

# tracing
tracing = { version = "0.1.41"}
tracing-subscriber = { version = "0.3.19" }
# only for `as_trace`
tracing-log = { version = "0.2.0" }

# iteration
itertools = { version = "0.14.0" }

# serialization
serde = { version = "1.0.219" }
serde_json = { version = "1.0.140" }
serde_with = { version = "3.12.0" }
serde_regex = { version = "1.1.0" }
json2markdown = { version = "0.2.1" }
typetag = { version = "0.2.20" }
dyn-eq = { version = "0.1.3" }
dyn-clone = {  version = "1.0.19" }
as-any = { version = "0.3.2" }

# crux app
crux_core = { version = "0.15.0" }

# gui (egui)
egui = { version = "0.32.0", features = ["serde"]}
epaint = { version = "0.32.0"}
egui_extras = { version = "0.32.0", default-features = false }
eframe = { version = "0.32.0", default-features = false }

#egui_taffy = "0.7.0"
egui_taffy = { git = "https://github.com/makerpnp/egui_taffy", rev = "c14e390c1f3cd6487968c5845ea205a38c6afbe2" }

#egui_mobius = "0.3.0-alpha.23"
egui_mobius = { git = "https://github.com/makerpnp/egui_mobius", rev = "e62f97bfcf97a831bd67dd75ab5eab9585922765" }
#egui_mobius = { path = "../../../libraries/rust/egui/egui_mobius/crates/egui_mobius" }

egui_material_icons = { git = "https://github.com/lucasmerlin/hello_egui.git", tag = "hello_egui-v0.9.0" }

egui_ltreeview = { version = "0.5.3" }
# also need egui 0.32, see https://github.com/LennysLounge/egui_ltreeview/pull/23
#egui_ltreeview = { git = "https://github.com/makerpnp/egui_ltreeview", rev = "7650da057b5700ffdc9ff5db003500096927b172" }

#egui-data-table = { version = "0.8.0" }
# requires a version with these PRs:
# 1 - https://github.com/kang-sw/egui-data-table/pull/51
# 2 - https://github.com/kang-sw/egui-data-table/pull/53
egui-data-table = { git = "https://github.com/makerpnp/egui-data-table", rev = "935b9ac9bc5e8a3fcc483f19880b6a873dc67eb9" }

#egui_double_slider = { version = "0.8.0"}
egui_double_slider = { git = "https://github.com/hacknus/egui_double_slider", rev = "86df8ecd38d82198f042111ce58792e3fab546fe" }

egui_vertical_stack = { version = "0.1.1" }

#egui_tool_windows = { path = "../egui/egui_tool_windows" }
egui_tool_windows = { version = "0.2.0"}

egui_dock = { version = "0.17.0" }

rfd = { version = "0.15.3" }

# images
image = { version = "0.25.6" }

# validation
validator = { version = "0.20.0", features = ["derive"] }

# i18n
#egui-i18n = { git = "https://github.com/fewensa/egui-i18n", rev = "3be4d89e6328d545a715529ac80415f49d675756", features = ["fluent"] }
#egui-i18n = { git = "https://github.com/makerpnp/egui-i18n", rev = "087c62591d8027b51641bf4bcf556106d17ea799", features = ["fluent"] }
egui-i18n = { version = "0.1.2", features = ["fluent"] }

# testing
rstest = { version = "0.26.1" }
assert_cmd = { version = "2.0.17" }
assert_fs = { version = "1.1.3" }
tempfile = { version = "3.10.1" }
indoc = { version = "2.0.6" }
predicates = { version = "3.1.3" }
predicates-tree = { version = "1.0.12" }

# profiling
profiling = { version = "1.0.16" }
puffin_http = { version = "0.16.1" }

# tasks/async
tokio = { version = "1.45.1", features = ["full"]}
crossbeam-channel = { version = "0.5.15" }

# Gerber rendering, types and parser
# Note, these three crates are tightly coupled, ensure that only one of each appears in the dependency tree.
#gerber_viewer = { version = "0.4.4"}
gerber_viewer = { git = "https://github.com/makerpnp/gerber_viewer.git", rev = "e4ed3bd48a428f422708021ca803ce1b65d3528d" }
#gerber_viewer = { path = "../gerber-viewer" }
gerber-types = { version = "0.6.0"}
#gerber-types = { git = "https://github.com/makerpnp/gerber-types.git", rev = "357215682b77093c3693efa4fe9d74076c1685fa"}
#gerber-types = { path = "../gerber-types" }
gerber_parser = { version = "0.3.1"}
#gerber_parser = { git = "https://github.com/makerpnp/gerber-parser.git", rev = "abcd8bcef8eb4d40d1ebf53d33bbb13d8c30825f"}
#gerber_parser = { path = "../gerber-parser" }

# math
num-rational = "0.4.2"
num-traits = "0.2.19"
rust_decimal = { version = "1.37.1"}
rust_decimal_macros = { version = "1.37.1"}
nalgebra = { version = "0.33.2", default-features = false }


[patch.crates-io]
# fork of egui 0.32.0 with the following fixes:
# https://github.com/emilk/egui/pull/7047 - Allow resize on one both or no axis
egui = { git = "https://github.com/MakerPnP/egui.git", rev = "312bb8ec1018875fa4f7624e2e1781cdf42799aa"}
# and since epaint and other crates come from the same repo, we have to patch them too if they are used as dependencies
epaint = { git = "https://github.com/MakerPnP/egui.git", rev = "312bb8ec1018875fa4f7624e2e1781cdf42799aa"}
