[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
planning = { path = "../../planning/planning" }
eda = { path = "../../eda/eda" }
pnp = { path = "../../pnp/pnp" }
util = { path = "../util" }

clap = { workspace = true, features = ["derive", "env"] }
clap-verbosity-flag = { workspace = true }

tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }
# only for `as_trace`
tracing-log = { workspace = true }
anyhow = {  workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]

[features]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
]