[package]
name = "util"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
tempfile = { workspace = true, optional = true }
predicates = { workspace = true, optional = true }
thiserror = { workspace = true }

[features]
testing = [
    "dep:tempfile",
    "dep:predicates",
]

[dev-dependencies]
rstest = { workspace = true}
util = { path = "", features = ["testing"]}