[package]
name = "gerber"
version = "0.1.0"
edition = "2024"

[dependencies]
gerber_types = { workspace = true }
gerber_parser = { workspace = true }
planning = { path = "../planning" }
pnp = { path = "../pnp" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true  }
env_logger = { workspace = true }
