[package]
name = "gerber"
version = "0.1.0"
edition = "2024"

[dependencies]
gerber-types = { workspace = true }
gerber_parser = { workspace = true }
pnp = { path = "../pnp" }
thiserror = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true  }
env_logger = { workspace = true }
