[package]
name = "gerber_viewer_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
# Logging
log = "0.4.27"
env_logger = "0.11"

# GUI Framework
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["default"] }
epaint = "0.31.1"
egui_extras = "0.31.1"
egui_taffy = "0.7.0"

# File Dialog
rfd = "0.15.2"

# Gerber rendering, types and parser
gerber_viewer = { git = "https://github.com/makerpnp/gerber_viewer.git", rev = "37349dc2a344d3e4f03ef081b6a7b695d4aa1652" }

# Errors
thiserror = "2.0.12"
