[package]
name = "i18n"
version = "0.1.0"
edition = "2024"

[features]
planner_app = ["dep:planner_app"]
validator = ["json"]
json = ["dep:serde_json"]

[dependencies]
planner_app = { path = "../planner_app", optional = true }

# logging
tracing = { workspace = true }

# gui
egui-i18n = { workspace = true }

# i18n
fluent-bundle = { workspace = true }

# Required for form validation (!)
serde_json = { workspace = true, optional = true }
