[package]
name = "math"
version = "0.1.0"
edition = "2024"

[dependencies]
nalgebra = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
rstest = { workspace = true}
