[package]
name = "planner_app"
version = "0.1.0"
edition = "2021"

[dependencies]
gerber = { path = "../gerber" }
planning = { path = "../planning" }
pnp = { path = "../pnp" }
math = { path = "../math" }
stores = { path = "../stores" }
package_mapper = { path = "../package_mapper" }

thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }

serde = { workspace = true }
serde_regex = { workspace = true }
serde_with = { workspace = true }

crux_core = { workspace = true }

petgraph = { workspace = true , features = ["serde-1"]}

chrono = { workspace = true, features = ["serde"] }

indexmap = { workspace = true }

derivative = { workspace = true }

num-rational = { workspace = true }
nalgebra = { workspace = true }

[features]
markdown = ["planning/markdown"]