[package]
name = "planner_gui"
version = "0.1.0"
edition = "2021"

[dependencies]
planner_app = { path = "../planner_app" }
slotmap = { version = "1.0.7" }
futures =  { workspace = true }
async-std =  { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
petgraph = { workspace = true }

#gui
# not using chusy 'tracing-output' default feature as we initilize tracing in the app.
cushy = { workspace = true, default-features = false, features = ["roboto-flex", "native-dialogs", "localization"]}

#i18n
unic-langid = { workspace = true, features = ["macros"]}
fluent-bundle = { workspace = true }

#logging
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
regex = { workspace = true }
