[package]
name = "planner_gui_egui"
version = "0.1.0"
edition = "2024"

[dependencies]
planner_app = { path = "../planner_app", features = ["markdown"] }

util = { path = "../util" }

# tasks/async
tokio = { workspace = true, features = ["full"]}
futures =  { workspace = true }
async-std =  { workspace = true }

# serialization
serde = { workspace = true, features = ["derive"] }

# gui
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",
    "glow",
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_taffy = {  workspace = true }
egui-i18n = { workspace = true }
egui_dock = { version = "0.16.0", features = ["serde"]}
egui_mobius = { workspace = true, features = ["serde"] }
egui_material_icons = { workspace = true }
egui_extras = { workspace = true }
# need 'opened' functionality
egui_ltreeview = { git = "https://github.com/MakerPnP/egui_ltreeview.git", rev ="9ddc522493f2420744714097bc783c659228a318", features = ["persistence", "serde"]}
#egui_ltreeview = { workspace = true, features = ["persistence", "serde"] }
egui-data-table = { git = "https://github.com/MakerPnP/egui-data-table.git", rev ="140ca9bcd1f6a065616096e015a3d87f5acd2fc2" }

rfd = { workspace = true }

# i18n
i18n = { path = "../i18n", features = ["planner_app", "json"] }
unic-langid = { workspace = true, features = ["macros"]}
fluent = { workspace = true }
fluent-bundle = { workspace = true }

# logging
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
regex = { workspace = true }

# form validation
validator = { workspace = true }

# other
slotmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
petgraph = { workspace = true }
derivative = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }