[package]
name = "planner_gui_egui"
version = "0.1.0"
edition = "2024"

[features]
profile-with-puffin = [
    "profiling/profile-with-puffin",
    "dep:puffin_http",
]

[dependencies]
planner_app = { path = "../planner_app", features = ["markdown"] }

util = { path = "../util" }
math = { path = "../math" }

# tasks/async
tokio = { workspace = true, features = ["full"]}
futures =  { workspace = true }
async-std =  { workspace = true }

# serialization
serde = { workspace = true, features = ["derive"] }

# gui
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",
    "glow",
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_taffy = {  workspace = true }
egui-i18n = { workspace = true }
egui_dock = { version = "0.16.0", features = ["serde"]}
egui_mobius = { workspace = true, features = ["serde"] }
egui_material_icons = { workspace = true }
egui_extras = { workspace = true }
# need 'opened' functionality
#egui_ltreeview = { git = "https://github.com/MakerPnP/egui_ltreeview.git", rev ="9ddc522493f2420744714097bc783c659228a318", features = ["persistence", "serde"]}
egui_ltreeview = { workspace = true, features = ["persistence", "serde"] }
#egui-data-table = { workspace = true }
egui-data-table = { git = "https://github.com/kang-sw/egui-data-table.git", rev ="024fc65" }
#egui-data-table = { git = "https://github.com/MakerPnP/egui-data-table.git", rev ="024fc6579b9e8ad273124dd8b0719ec2921e0d16" }
egui_double_slider = { workspace = true }
egui_vertical_stack = { workspace = true }
egui_tool_windows = { workspace = true, features = ["persistence"] }

rfd = { workspace = true }

# i18n
i18n = { path = "../i18n", features = ["planner_app", "json"] }

# logging
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
regex = { workspace = true }

# profiling
profiling = { workspace = true}
puffin_http = { workspace = true, optional = true}

# form validation
validator = { workspace = true }

# Gerber rendering, types and parser
gerber_viewer = { workspace = true }

# other
slotmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
petgraph = { workspace = true }
derivative = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
image = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
nalgebra = { workspace = true, features = ["std"] }

# math
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
rstest = { workspace = true }
