[package]
name = "planner_gui_egui"
version = "0.1.0"
edition = "2024"

[features]
profile-with-puffin = [
    "profiling/profile-with-puffin",
    "dep:puffin_http",
]

# enable to see layout debugging information
layout_debugging = []

[dependencies]
planner_app = { path = "../planner_app", features = ["markdown"] }

util = { path = "../util" }
math = { path = "../math" }
eda_units = { path = "../eda_units", features = ["gerber"] }

# tasks/async
tokio = { workspace = true, features = ["full"]}
futures =  { workspace = true }
async-std =  { workspace = true }

# serialization
serde = { workspace = true, features = ["derive"] }

# gui
egui = { workspace = true }
eframe = { workspace = true, default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts",
    "glow",
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_taffy = {  workspace = true }
egui-i18n = { workspace = true }
egui_dock = { workspace = true, features = ["serde"]}
egui_mobius = { workspace = true, features = ["serde"] }
egui_material_icons = { workspace = true }
egui_extras = { workspace = true }
egui_ltreeview = { workspace = true, features = ["persistence"] }
egui-data-table = { workspace = true }
egui_double_slider = { workspace = true }
egui_vertical_stack = { workspace = true }
egui_tool_windows = { workspace = true, features = ["persistence"] }

rfd = { workspace = true }

# i18n
i18n = { path = "../i18n", features = ["planner_app", "json"] }

# logging
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
regex = { workspace = true }

# profiling
profiling = { workspace = true}
puffin_http = { workspace = true, optional = true}

# form validation
validator = { workspace = true }

# Gerber rendering, types and parser
gerber_viewer = { workspace = true }

# other
slotmap = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
petgraph = { workspace = true }
derivative = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true }
image = { workspace = true }
num-rational = { workspace = true }
num-traits = { workspace = true }
nalgebra = { workspace = true, features = ["std"] }

# math
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
rstest = { workspace = true }
