[package]
name = "planning"
version = "0.1.0"
edition = "2021"

[features]
markdown = ["dep:json2markdown"]

[dependencies]
pnp = { path = "../pnp" }
util = { path = "../util" }

anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
time = { workspace = true, features = ["serde", "serde-well-known"] }
rust_decimal = { workspace = true }
serde = { workspace = true,  features = ["derive"] }
serde_json = { workspace = true,  features = ["preserve_order"] }
serde_with = { workspace = true }
typetag = { workspace = true }
dyn-eq = { workspace = true }
dyn-clone = { workspace = true }

as-any = { workspace = true }
json2markdown = { workspace = true, optional = true }

tracing = { workspace = true }

indexmap = { workspace = true, features = ["serde"] }
heck = { workspace = true }
csv = { workspace = true }

itertools = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
