[package]
name = "pnp"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
rust_decimal = { workspace = true}
lexical-sort = { workspace = true }

serde = { workspace = true, features = ["derive"] }
serde_with = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
