[package]
name = "stores"
version = "0.1.0"
edition = "2021"

[dependencies]
assembly = { path = "../assembly"}
criteria = { path = "../criteria"}
pnp = { path = "../pnp"}
eda = { path = "../eda"}
planning = { path = "../planning"}
part_mapper = { path = "../part_mapper"}
package_mapper = { path = "../package_mapper"}
util = { path = "../util"}

anyhow = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

rust_decimal = { workspace = true }

csv = { workspace = true }

serde = { workspace = true , features = ["derive"] }
serde_with = { workspace = true }

tracing = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
util = { path = "../util", features = ["testing"]}

assert_fs = { workspace = true }
stores = { path = ".", features = ["testing"] }
tempfile = { workspace = true }

[features]
testing = [
    "part_mapper/testing",
    "package_mapper/testing",
]