[package]
name = "variantbuilder_app"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
csv = { workspace = true }
termtree = { workspace = true }

serde = { workspace = true }
serde_regex = { workspace = true }
serde_with = { workspace = true }

crux_core = { workspace = true }

assembly = { path = "../assembly"}
part_mapper = { path = "../part_mapper"}
eda = { path = "../eda"}
stores = { path = "../stores"}
