[package]
name = "eda"
version = "0.1.0"
edition = "2021"

[dependencies]
pnp = { path = "../../pnp/pnp" }
criteria = { path = "../../common/criteria" }
#util = { path = "../util" }

thiserror = { workspace = true }
regex = { workspace = true }

rust_decimal = { workspace = true}
rust_decimal_macros = { workspace = true}

serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rstest = { workspace = true }
