[package]
name = "gerber"
version = "0.1.0"
edition = "2024"

[dependencies]
gerber-types = { workspace = true }
gerber_parser = { workspace = true }
pnp = { path = "../../pnp/pnp" }
thiserror = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }


[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true  }
env_logger = { workspace = true }
