[package]
name = "part_mapper"
version = "0.1.0"
edition = "2021"

[dependencies]
pnp = { path = "../../pnp/pnp" }
assembly = { path = "../assembly"}
eda = { path = "../../eda/eda" }
criteria = { path = "../../common/criteria" }
util = { path = "../../common/util" }

regex = { workspace = true }

[features]
testing = []